# messaging-translator-app

./: README.md  dump.rdb
backend/: .gitignore  alembic.ini  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  start.sh
backend/.ebextensions/: 01_postgre.config
backend/alembic/: env.py
backend/alembic/versions/: 2023_11_22_1624-e11af1d07d2c_messages_received_at_attr_now_nullable.py  2023_12_27_1242-75410ea24476_added_convo_photo_and_latest_message_id.py  2023_12_27_1512-5c9b8d15d6bf_removed_latest_message_id.py  2023_12_27_1541-cf8eaa1e21f1_removed_latest_message_id.py  2023_12_27_1542-3926483656d5_removed_latest_message_id.py  2023_12_27_1601-674326c5f1ea_fix_ambiguous_foreign_keys.py  2023_12_28_1713-b8c0579e739b_removed_received_messages_relationship_.py  2023_12_29_1908-367a41c75ca2_add_is_read_to_translation_table.py  2023_12_29_1915-16dba94bc2da_remove_default_value_for_is_read_column_.py  2024_01_09_1455-967ba8404b77_user_conversations_in_descending_order_.py  2024_02_01_1739-5c962462dbe9_remove_last_read_msg_id_from_group_.py  2024_02_13_1948-fca5b6026dd3_changing_profile_photo_maximum_length.py  2024_02_17_1526-2e2526fccf6b_added_pwd_changed_column_to_user_table.py  2024_02_20_1545-3afabc4e9bf2_is_group_chat_column_in_conversation_.py  2024_02_20_1622-b6ff2b988e81_conversation_name_nullable_in_.py  2024_03_08_2124-c01d054d491b_added_api_key_column_to_user.py  2024_03_09_2000-7a4f6e3d031e_no_latest_message_column_and_latest_.py  2024_03_13_1430-719b0c1ffc60_indexed_user_email_conversation_latest_.py  2024_03_18_1239-8efb481064fb_composite_index_on_message_conversation_.py  2024_03_21_2039-bec34a2a8f20_added_a_chat_identifier_column_to_.py  2024_03_26_1214-f2c624b0ff53_added_a_is_verified_column_to_users_.py
backend/app/: backend_prestart.py  database.py  dependencies.py  exceptions.py  handlers.py  logger.py  main.py
backend/app/api/: dependencies.py
backend/app/core/: config.py  database.py  email.py  security.py
backend/app/cron/: db_cleanup.py
backend/app/crud/: __init__.py  base.py  crud_association.py  crud_convo.py  crud_message.py  crud_translation.py  crud_user.py
backend/app/models/: __init__.py  models.py
backend/app/schemas/: __init__.py  associations.py  aws.py  conversation.py  email_type.py  message.py  responses.py  token.py  translation.py  user.py
backend/scripts/: poetry.sh
(+100 files in other folders)
