[tool.poetry]
name = "messaging-translator"
version = "0.1.0"
description = "A messaging app that translates any sent messages to the target user's target language"
authors = ["Sam Liang <iamsamliang8@gmail.com>"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
