[tool.poetry]
name = "messaging-translator"
version = "0.1.0"
description = "A messaging app that translates any sent messages to the target user's target language"
authors = ["Sam Liang <iamsamliang8@gmail.com>"]
license = "Proprietary"
readme = "../README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "~3.11.6"
fastapi = "0.104.1"
passlib = "1.7.4"
pydantic = "2.5.1"
pydantic-settings = "2.1.0"
python-jose = "3.3.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
openai = "^1.3.3"
psycopg2 = "^2.9.9"
uvicorn = "^0.24.0.post1"


[tool.poetry.group.dev.dependencies]
faker = "^20.1.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
